--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.14",
     "pg": "^8.6.0",
+    "request": "^2.88.2",
     "sequelize": "^6.6.2"
   },
   "devDependencies": {
